--- a/src/index.css
+++ b/src/index.css
@@ -23,54 +23,68 @@ nav {
   display: flex;
   flex-wrap: wrap;
   background-color: steelblue;
-  min-height: 400px;
+  min-height: 500px;
   justify-content: center;
 }
 
- .game-elements-container{
-   height: 300px;
+.game-elements-container{
+  display: flex;
+   height: 400px;
    min-width: 300px;
    background-color:#333;
    margin-top: 30px;
+   flex-direction: column;
+   justify-content: space-around;
+   align-items: center;
+   
+   
 }
 
 .small-logo{
-  display: flex;
+  border-radius: 8px;
   color: white;
   font-size: xx-large;
-  width: auto;
-  justify-content: center;
-  padding: 10px;
-}
-.input-number{
   width: 75%;
-  height: 35px;
+  height: 45px;
+  text-align: center;
+  background-color: steelblue;
+  align-content: center;
+ }
+
+.input-number{
+  
+  width: 75%;
+  height: 45px;
   font-size: xx-large;
   text-align: center;
   
 }
-.submit-guess{
-  margin-top: 15px;
+ .submit-guess{
+  border-radius: 8px;
   width: 75%;
-  height: 35px;
+  height: 45px;
   font-size: large;
   text-align: center;
-  display: flex;
-  justify-content: center;
+  background-color: steelblue;
 }
 
 .count{
+  background-color: steelblue;
   width: 75%;
-  height: 35px;
+  height: 45px;
   background-color: white;
-  margin-top: 15px;
+  border-radius: 8px;
   text-align: center;
+  font-size: large;
 }
 .guessBox{
-  margin-top: 15px;
+  background-color: steelblue;
   width: 75%;
-  height: 35px;
+  height: 45px;
   background-color: white;
+  border-radius: 8px;
+  text-align: center;
+  font-size: large;
 }
 
 nav a {
