--- a/src/index.css
+++ b/src/index.css
@@ -36,7 +36,7 @@ nav {
    flex-direction: column;
    justify-content: space-around;
    align-items: center;
-   
+   border-radius: 8px;
    
 }
 
@@ -57,7 +57,7 @@ nav {
   height: 45px;
   font-size: xx-large;
   text-align: center;
-  
+  border-radius: 8px;
 }
  .submit-guess{
   border-radius: 8px;
@@ -105,6 +105,7 @@ navbar a:hover {
 /* The Modal (background) */
 .modal {
   display: block; /* Hidden by default */
+  align-self: center;
   position: fixed; /* Stay in place */
   z-index: 1; /* Sit on top */
   left: 0;
@@ -122,7 +123,10 @@ navbar a:hover {
   margin: 15% auto; /* 15% from the top and centered */
   padding: 20px;
   border: 1px solid #888;
-  width: 80%; /* Could be more or less, depending on screen size */
+  width: 50%; /* Could be more or less, depending on screen size */
+  font-family: Arial, Helvetica, sans-serif;
+  font-style: italic;
+  font-size: x-large;
 }
 
 /* The Close Button */
